<resources>
    <string name="app_name">Samsung</string>
    <string name="save_Princess">игры</string>
    <string name="start">НАЧАТЬ</string>
    <string name="help">ПОМОЩЬ</string>
    <string name="push_box">Толкать коробку</string>
    <string name="back">НАЗАД</string>
    <string name="load">ЗАГРУЗИТЬ</string>
    <string name="game_help">Помощь по игре</string>
    <string name="label_next_level">следующий уровень</string>
    <string name="label_reset_game">сбросить</string>
    <string name="label_exit_app">выход</string>
    <string name="label_prev_level">предыдущий уровень</string>
    <string name="choose_level">Выбрать уровень</string>
    <string name="prv_level_label">Предыдущий уровень</string>
    <string name="next_level_label">следующий уровень</string>
    <string name="reset_label">сбросить</string>
    <string name="undo_prv_step">предыдущий шаг</string>
    <string name="change_game_level">выберите уровень</string>
    <string name="tuichu_youxi">выйти из игры</string>
    <string name="kaishi_youxi">начать</string>
    <string name="youxi_jianjie">инструкция</string>
    <string name="back_to_main_screen">Назад на главный экран</string>
    <string name="xgq_exit">выйти из уровня</string>
    <string name="no_more_levels">больше нет уровней</string>
    <string name="already_first_level">уже первый уровень</string>
    <string name="tui_xiangzi">Толкать коробку</string>

    <string name="level1">LEVEL 1</string>
    <string name="level2">LEVEL 2</string>
    <string name="resume">ПРОДОЛЖИТЬ</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="pause">ПАУЗА</string>
    <string name="background">Ночной режим :</string>
    <string name="character">Персонаж</string>
    <string name="settings">Настройки</string>
    <string name="scoreBoard">ТАБЛИЦА ОЧКОВ</string>
    <string name="loadgame">ПРОДОЛЖИТЬ</string>
    <string name="sliding">2048</string>
    <string name="math24text">match 24</string>
    <string name="quit">ВЫЙТИ</string>
    <string name="title_activity_catchball_scoreboard">CatchballScoreboardActivity</string>
    <string name="action_settings">Настройки</string>
    <string name="_10_points">10 очков</string>
    <string name="introduction">Инструкция</string>
    <string name="boom">БУМ!</string>
    <string name="_30_points">30 очков</string>
    <string name="in_this_game_you_can_control_a_fly_character_intent_on_catching_as_many_balls_as_possible">В этой игре вы управляете летающим персонажем, который пытается поймать как можно больше мячей.</string>
    <string name="you_must_elude_the_booms_and_try_to_get_the_points">Вы должны избегать взрывов и стараться зарабатывать очки.</string>
    <string name="if_the_score_reaches_60_points_you_will_be_able_to_access_the_next_level">Если вы наберете 60 очков, сможете перейти на следующий уровень.</string>
    <string name="dash_to_catch_the_balls_and_watch_out_the_booms">Спешите ловить мячи и избегайте взрывов!</string>

    <string name="rare_5">Card 5</string>
    <string name="rare_3">Card 3</string>
    <string name="rare_8">Card 8</string>
    <string name="rare_2">Card 2</string>
    <string name="rare_6">Card 6</string>
    <string name="rare_9">Card 9</string>
    <string name="rare_10">Card 10</string>
    <string name="rare_12">Card 12</string>
    <string name="rare_7">Card 7</string>
    <string name="rare_13">Card 13</string>
    <string name="rare_11">Card 11</string>
    <string name="rare_0">Card 0</string>
    <string name="rare_1">Card 1</string>
    <string name="rare_4">Card 4</string>
</resources>
