<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/math24Menu"
    tools:context=".games.math24game.activity.Math24Menu">

    <TextView
        android:id="@+id/savePrincess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/math24text"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="#2A2929"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newmathGame"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/savePrincess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="Новая Игра"
        android:textColor="#F0F4F6" />


    <Button
        android:id="@+id/mathScoreBoardbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newmathGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColor="#E3E9ED"
        android:text="@string/scoreBoard" />

    <Button
        android:id="@+id/intro_mathBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/mathScoreBoardbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColor="#F3F8FB"
        android:text="@string/introduction" />

    <Button
        android:id="@+id/QuitmathButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/quit"
        android:background="@color/colorPrimary"
        android:textColor="#F1F4F6"
        android:layout_below="@+id/intro_mathBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        android:id="@+id/setting_btn_math"
        android:layout_width="46dp"
        android:layout_height="57dp"
        android:background="#00C14646"
        android:clickable="true"
        android:tint="#2C2B2B"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/settingicons" />

</RelativeLayout>