<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:id="@+id/catchballintroPage">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/introduction"
        android:textColor="@color/title_color"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Первая картинка и описание -->
    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="24dp"
        app:srcCompat="@drawable/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <!-- Вторая картинка и описание -->
    <TextView
        android:id="@+id/points1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/_10_points"
        android:textColor="@color/points_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.428" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/pink"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <TextView
        android:id="@+id/points2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_points"
        android:textColor="@color/points_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/points1"
        app:layout_constraintStart_toStartOf="@+id/points1"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

    <!-- Третья картинка и описание -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <TextView
        android:id="@+id/points3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boom"
        android:textColor="@color/boom_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/points2"
        app:layout_constraintStart_toStartOf="@+id/points2"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <!-- Основное описание игры -->
    <TextView
        android:id="@+id/points4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dash_to_catch_the_balls_and_watch_out_the_booms"
        android:textColor="@color/description_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/intro1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_this_game_you_can_control_a_fly_character_intent_on_catching_as_many_balls_as_possible"
        android:textColor="@color/description_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/points4"
        app:layout_constraintStart_toStartOf="@+id/points4"
        app:layout_constraintTop_toBottomOf="@+id/points4" />

    <TextView
        android:id="@+id/intro2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/you_must_elude_the_booms_and_try_to_get_the_points"
        android:textColor="@color/description_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/intro1"
        app:layout_constraintStart_toStartOf="@+id/intro1"
        app:layout_constraintTop_toBottomOf="@+id/intro1" />

    <TextView
        android:id="@+id/intro3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/if_the_score_reaches_60_points_you_will_be_able_to_access_the_next_level"
        android:textColor="@color/description_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/intro2"
        app:layout_constraintStart_toStartOf="@+id/intro2"
        app:layout_constraintTop_toBottomOf="@+id/intro2" />

</androidx.constraintlayout.widget.ConstraintLayout>
