<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/slidingMenu"
    tools:context=".games.slidinggame.activity.SlidingMenu">

    <TextView
        android:id="@+id/sliding_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/sliding"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="#2A2929"

        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newslidingGame"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sliding_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="Новая игра"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/slideScoreBoardbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newslidingGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColor="#F6F4F4"
        android:text="@string/scoreBoard" />

    <Button
        android:id="@+id/help_slide"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/slideScoreBoardbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColor="#F3F3F6"
        android:text="@string/introduction" />

    <Button
        android:id="@+id/QuitslideButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Выход"
        android:background="@color/colorPrimary"
        android:textColor="#F4F7F8"
        android:layout_below="@+id/help_slide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        android:id="@+id/setting_btn_slide"
        android:layout_width="46dp"
        android:layout_height="57dp"
        android:background="#00C14646"
        android:clickable="true"
        android:tint="#313131"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/settingicons" />

</RelativeLayout>