<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/catchBallmenu"
    tools:context=".games.catchballgame.activity.CatchBallMenu">

    <TextView
        android:id="@+id/catchBall_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="Catch Ball"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="#2A2929"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newballGame"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/catchBall_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="Новая игра"
        android:textColor="#F1F8FB" />

    <Button
        android:id="@+id/ballScoreBoardbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newballGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/scoreBoard" />

    <Button
        android:id="@+id/help_ball"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ballScoreBoardbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/introduction" />

    <Button
        android:id="@+id/quitBallBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Выйти"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/help_ball"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <ImageView
        android:id="@+id/setting_btn_ball"
        android:layout_width="46dp"
        android:layout_height="57dp"
        android:background="#00C14646"
        android:clickable="true"
        android:tint="#262626"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/settingicons" />

</RelativeLayout>